--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tide = "0.16.0"
-async-std = { version = "1.10.0", features = ["attributes"] }
 serde = { version = "1.0.136", features = ["derive"] }
-underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "b55e706475695b4a460eb77121e3fca05b06b872", features = ["serialization"] }
+underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "40765dfc8160a39b3f754377fe412da926de70d0", features = ["serialization", "openapi"] }
 serde_json = { version = "1.0.78" }
 rand = "0.8.5"
-redis = { version = "0.21.5", features = ["async-std-comp"] }
+redis = { version = "0.21.5", features = ["tokio-comp"] }
+poem = { version = "1.3.5", features = ["static-files"] }
+poem-openapi = { version = "1.3.5", features = ["swagger-ui"]}
+tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
