--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.136", features = ["derive"] }
-underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "dfb2332f3bfd5d5c98455db98b7151b766595ab0", features = ["serialization", "openapi"] }
+underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "ea12b848760d7dd8e7e6de5d1b6cc6c5a3b7e081", features = ["serialization", "openapi"] }
+# underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
 serde_json = { version = "1.0.78" }
 rand = "0.8.5"
 redis = { version = "0.21.5", features = ["tokio-comp"] }
