--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "
 # underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
 serde_json = { version = "1.0.81" }
 rand = "0.8.5"
-redis = { version = "0.21.5", features = ["tokio-comp"] }
 poem = { version = "1.3.29", features = ["static-files"] }
 poem-openapi = { version = "1.3.29", features = ["swagger-ui"]}
 tokio = { version = "1.18.1", features = ["rt-multi-thread"] }
+sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls" , "postgres" ] }
