--- a/app/package.json
+++ b/app/package.json
@@ -6,8 +6,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "generate": "openapi-generator-cli generate -i http://localhost:8080/spec -g typescript-fetch -o src/generated-api --additional-properties=supportsES6=true,withInterfaces=true",
-    "prettier": "prettier --write src"
+    "generate": "openapi-generator-cli generate -i http://localhost:8080/spec -g typescript-fetch -o src/generated-api --additional-properties=supportsES6=true,withInterfaces=true,modelPropertyNaming=original",
+    "prettier": "prettier --write src",
+    "lint": "eslint --fix src/**"
   },
   "dependencies": {
     "react": "^18.1.0",
@@ -17,7 +18,15 @@
     "@openapitools/openapi-generator-cli": "^2.5.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-react": "^1.3.2",
+    "eslint": "^8.16.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
     "prettier": "2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
