--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "generate": "openapi-generator-cli generate -i http://localhost:8080/spec -g typescript-fetch -o src/generated-api --additional-properties=supportsES6=true,withInterfaces=true,modelPropertyNaming=original",
     "prettier": "prettier --write src",
-    "lint": "eslint --fix src/**"
+    "lint": "eslint --fix src"
   },
   "dependencies": {
     "react": "^18.1.0",
