--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.137", features = ["derive"] }
-underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "ad3ca039bb6b9cd57144b75abc9aa065da03bf4a", features = ["serialization", "openapi"] }
+# underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "9004560d1cb3479b98de40b25cf47bd5e87f6c75", features = ["serialization", "openapi"] }
+underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
 serde_json = { version = "1.0.81" }
 rand = "0.8.5"
 poem = { version = "1.3.30", features = ["static-files"] }
 poem-openapi = { version = "2.0.0", features = ["swagger-ui"]}
 tokio = { version = "1.19.1", features = ["rt-multi-thread"] }
 sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls" , "postgres" ] }
+strum = "0.24"
+strum_macros = "0.24"
+thiserror = "1.0.31"
