Most recent underworld_core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.137", features = ["derive"] }
-# underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "9004560d1cb3479b98de40b25cf47bd5e87f6c75", features = ["serialization", "openapi"] }
-underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
+underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "de59efcc589a6b8a040f79aea0ff467cc16bd053", features = ["serialization", "openapi"] }
 serde_json = { version = "1.0.81" }
 rand = "0.8.5"
 poem = { version = "1.3.30", features = ["static-files"] }
