--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "69fb89f09e7953e3edc1178f5c138ed1d02c6a87", features = ["serialization", "openapi"] }
-# underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
-serde_json = { version = "1.0" }
-rand = "0.8"
-poem = { version = "1.3", features = ["static-files"] }
+chrono = "0.4.19"
+poem = { version = "1.3", features = ["static-files", "cookie", "session"] }
 poem-openapi = { version = "2.0", features = ["swagger-ui"]}
-tokio = { version = "1.19", features = ["rt-multi-thread"] }
-sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
+rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
+sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
 strum = "0.24"
 strum_macros = "0.24"
 thiserror = "1.0"
+tokio = { version = "1.20", features = ["rt-multi-thread"] }
+uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
+underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "69fb89f09e7953e3edc1178f5c138ed1d02c6a87", features = ["serialization", "openapi"] }
+# underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
