--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "lint": "eslint --fix src"
   },
   "dependencies": {
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.1",
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
