--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --fix src"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.0.10",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
