Set prod build base path

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=/underworld/",
     "compile": "tsc --noEmit",
     "preview": "vite preview",
     "generate": "openapi-generator-cli generate -i http://localhost:8080/spec -g typescript-fetch -o src/generated-api --additional-properties=supportsES6=true,withInterfaces=true,modelPropertyNaming=original",
