--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rand = "0.8"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
-sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
+sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "migrate" ] }
 strum = "0.24"
 strum_macros = "0.24"
 thiserror = "1.0"
