--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_UNDERWORLD_URL="https://underworldserver.fly.dev/"
+VITE_UNDERWORLD_URL="https://underworldserver.fly.dev"
 VITE_FRONTEND_BASE_URL="/underworld"
 VITE_APP_VERSION="0.6"
