--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --fix src"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query": "4.2.3",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,18 +21,18 @@
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.1",
     "@types/js-cookie": "^3.0.2",
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^2.0.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
-    "eslint-plugin-react": "^7.31.0",
+    "eslint-plugin-react": "^7.31.1",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.8",
