--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "2.5.2",
+    "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.2.2",
     "@types/react-dom": "^18.2.3",
