--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,5 +19,4 @@ strum_macros = "0.24"
 thiserror = "1.0"
 tokio = { version = "1.27", features = ["rt-multi-thread"] }
 uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
-underworld_core = { git = "https://github.com/SpinningGoblin/underworld_core", rev = "4cacf75525d4805814333555b9fc9af3d6e7d8c7", features = ["serialization", "openapi"] }
-# underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
+underworld_core = { path = "../core", features = ["serialization", "openapi"] }
