--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,12 +13,11 @@ exclude = ["/fixtures", "/.github", "/.vscode", ".*"]
 
 [dependencies]
 rand = "0.8"
-bevy_ecs = { version = "0.9", optional = true }
+bevy_ecs = { version = "0.11", optional = true }
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
-serde_json = { version = "1.0", optional = true }
-uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
-poem-openapi = { version = "2.0", optional = true }
+uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
+poem-openapi = { version = "3.0", optional = true }
 strum = "0.24"
 strum_macros = "0.24"
 thiserror = "1.0"
@@ -26,5 +25,7 @@ thiserror = "1.0"
 [features]
 bevy_components = ["bevy_ecs"]
 serialization = ["serde"]
-json = [ "serde_json" ]
 openapi = ["poem-openapi"]
+
+[dev-dependencies]
+serde_json = { version = "1.0" }
